--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "16.11.0",
-    "react-native": "0.62.2"
+    "react-native": "0.62.2",
+    "react-native-cli": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
@@ -20,6 +21,7 @@
     "babel-jest": "^26.0.1",
     "eslint": "^6.8.0",
     "jest": "^26.0.1",
+    "jetifier": "^1.6.5",
     "metro-react-native-babel-preset": "^0.59.0",
     "react-test-renderer": "16.11.0"
   },
