--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/drawer": "^5.7.2",
     "@react-navigation/native": "^5.2.6",
     "@react-navigation/stack": "^5.3.1",
     "react": "16.11.0",
