--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,12 +14,14 @@
     "@react-navigation/drawer": "^5.7.2",
     "@react-navigation/native": "^5.2.6",
     "@react-navigation/stack": "^5.3.1",
+    "axios": "^0.19.2",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^1.0.0",
-    "react-native-screens": "^2.7.0"
+    "react-native-screens": "^2.7.0",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
