--- a/mobile/android/gradle.properties
+++ b/mobile/android/gradle.properties
@@ -26,3 +26,8 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.33.1
+
+MYAPP_UPLOAD_STORE_FILE=alexbotelhoa.keystore
+MYAPP_UPLOAD_KEY_ALIAS=alexbotelhoa
+MYAPP_UPLOAD_STORE_PASSWORD=w3bm25t3r
+MYAPP_UPLOAD_KEY_PASSWORD=w3bm25t3r
